<resources>
    <string name="app_name">Android5778_0920_9377_02</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="take_go">Take&amp;Go</string>
    <string name="About_Us">"\nTake&amp;Go is a company for cars renting. We have many Typs of cars so you probably find the one that you want.\nWe have branches all over the country,\nYou can come and be impressed.
        \nWe here for you.
        "</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_register">Register</string>
    <string name="action_singin">Sign in</string>

    <!-- Strings related to Add User -->
    <string name="id">id</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="add_user">Add User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="branch_parking_number">Branch:</string>
    <string name="kilometers">Kilometers</string>
    <string name="car_number">Car Number</string>

</resources>
