<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.owner.android5778_0920_9377_02.controller.AddUserActivity">

    <EditText
        android:id="@+id/IdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/FirstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:ems="10"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/LastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:ems="10"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/PhoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:ems="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/EmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/CreditCardNumberText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/credit_card_number"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/AddUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/add_user"
        android:textAlignment="center"
        android:textSize="24sp" />
</LinearLayout>
